Add amazon-product-api, copy-paste and chalk NPM modules to project

--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "url": "https://github.com/matiassingers/shelfies-amazon-linker/issues"
   },
   "homepage": "https://github.com/matiassingers/shelfies-amazon-linker",
-  "dependencies": {},
+  "dependencies": {
+    "amazon-product-api": "~0.1.2",
+    "copy-paste": "~0.3.0",
+    "chalk": "~0.5.1"
+  },
   "devDependencies": {
     "mocha": "*"
   }
